--- a/client/css/client.css
+++ b/client/css/client.css
@@ -1,3 +1,21 @@
+header {
+  background-color: #0dd5b2;
+  display: none;
+  height: 40px;
+  left: 0;
+  padding: 5px;
+  position: absolute;
+  top: 0;
+  width: 100%; }
+  header .results-text {
+    color: #fff;
+    float: right;
+    font-family: "AvenirLTStd-Book";
+    font-size: 20px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin: 5px 0 0 5px; }
+
 #search_container #logo {
   margin: 120px -45px 15px 0; }
 
